--- a/manifest.json
+++ b/manifest.json
@@ -17,11 +17,13 @@
   "description": "Adds next episode links to torrent files on Torrentz.",
   "manifest_version": 2,
   "name": "Next Episode for Torrentz",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "web_accessible_resources": [
     "icon16.png"
   ],
   "icons": {
-    "16": "icon16.png"
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
   }
 }
